--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Install Chocolatey
+      run: |
+        Set-ExecutionPolicy Bypass -Scope Process -Force
+        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
+        iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+    
     - name: Install Dart SDK
       run: |
         choco install dart-sdk --version=3.4.0 -y
@@ -21,10 +27,13 @@ jobs:
         echo "$dartPath" >> $env:GITHUB_PATH
         echo "Added Dart SDK path: $dartPath"
     
-    - name: Validate Dart Path
+    - name: Verify Dart SDK Installation
       run: |
         if (!(Test-Path "$env:ChocolateyInstall\lib\dart-sdk\tools\dart.exe")) {
           Write-Error "Dart executable not found in expected path."
+          Get-ChildItem "$env:ChocolateyInstall\lib\dart-sdk" -Recurse | Where-Object { $_.Name -eq "dart.exe" } | ForEach-Object { Write-Output "Found dart.exe at: $($_.FullName)" }
+        } else {
+          Write-Output "Dart SDK installed successfully at: $env:ChocolateyInstall\lib\dart-sdk\tools\dart.exe"
         }
     
     - name: Verify Dart version
