--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -57,6 +57,14 @@ jobs:
         flutter-version: '3.19.0'
         channel: 'stable'
         cache: true
+        dart-version: '3.4.0'  # Specify Dart version explicitly
+    
+    - name: Configure Flutter to use system Dart
+      run: |
+        Write-Host "Configuring Flutter to use system Dart..."
+        flutter config --no-analytics
+        flutter config --no-cli-animations
+        flutter config --dart-sdk "C:\tools\dart-sdk"
     
     - name: Verify Flutter and Dart versions
       run: |
