--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -54,8 +54,8 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.19.3'  # This version includes Dart 3.4.0
-        channel: 'stable'
+        flutter-version: '3.19.0-4.0.pre'  # This version includes Dart 3.4.0
+        channel: 'beta'  # Using beta channel for this specific version
         cache: true
     
     - name: Configure Flutter
