Switch to Flutter 3.16.9 stable

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -54,8 +54,8 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.19.0'  # Using a valid beta version
-        channel: 'beta'
+        flutter-version: '3.16.9'
+        channel: 'stable'
         cache: true
     
     - name: Configure Flutter
