Simplify workflow to use standard Flutter action with caching

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -19,24 +19,7 @@ jobs:
         flutter-version: '3.19.3'
         channel: 'stable'
         cache: true
-
-    - name: Configure Flutter
-      run: |
-        Write-Host "Configuring Flutter..."
-        flutter config --no-analytics
-        flutter config --no-cli-animations
-
-    - name: Verify Flutter and Dart versions
-      run: |
-        Write-Host "Checking Flutter version..."
-        flutter --version
-        Write-Host "Checking Dart version..."
-        dart --version
-        $dartVersion = dart --version
-        if (-not ($dartVersion -match "3.4.0")) {
-            Write-Error "Dart version 3.4.0 is required, but found: $dartVersion"
-            exit 1
-        }
+        cache-key: 'flutter-windows-3.19.3-'
 
     - name: Install dependencies
       run: flutter pub get
@@ -44,21 +27,11 @@ jobs:
     - name: Build Windows app
       run: flutter build windows --release
 
-    - name: Setup MSIX packaging
-      run: |
-        Write-Host "Setting up MSIX packaging..."
-        flutter pub add msix
-        flutter pub get
-
-    - name: Configure MSIX
-      run: |
-        Write-Host "Configuring MSIX..."
-        flutter pub run msix:create --display-name "Kaatje" --publisher-display-name "Your Publisher Name" --identity-name "com.yourdomain.kaatje" --publisher "CN=YourPublisherID" --logo "assets/images/icon.png" --version "1.0.0.0"
-
     - name: Create MSIX package
       run: |
-        Write-Host "Creating MSIX package..."
-        flutter pub run msix:create
+        flutter pub add msix
+        flutter pub get
+        flutter pub run msix:create --display-name "Kaatje" --publisher-display-name "Your Publisher Name" --identity-name "com.yourdomain.kaatje" --publisher "CN=YourPublisherID" --logo "assets/images/icon.png" --version "1.0.0.0"
 
     - name: Upload MSIX package
       uses: actions/upload-artifact@v4
