--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -3,38 +3,39 @@ name: Windows Build
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.19.3'
-        channel: 'stable'
-        cache: true
-        cache-key: 'flutter-windows-3.19.3-'
-
-    - name: Install dependencies
-      run: flutter pub get
-
-    - name: Build Windows app
-      run: flutter build windows --release
-
-    - name: Create MSIX package
-      run: |
-        flutter pub add msix
-        flutter pub get
-        flutter pub run msix:create --display-name "Kaatje" --publisher-display-name "Your Publisher Name" --identity-name "com.yourdomain.kaatje" --publisher "CN=YourPublisherID" --logo "assets/images/icon.png" --version "1.0.0.0"
-
-    - name: Upload MSIX package
-      uses: actions/upload-artifact@v4
-      with:
-        name: windows-msix
-        path: build/windows/msix/*.msix 
+      - uses: actions/checkout@v4
+      
+      - name: Set up Flutter
+        uses: dart-lang/setup-dart@v1
+        with:
+          sdk: '3.4.0'
+          
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.0'
+          channel: 'stable'
+          cache: true
+          
+      - name: Install dependencies
+        run: flutter pub get
+        
+      - name: Build Windows app
+        run: flutter build windows
+        
+      - name: Create MSIX package
+        run: |
+          flutter pub add msix
+          flutter pub run msix:create
+          
+      - name: Upload MSIX package
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-app
+          path: build/windows/runner/Release/*.msix 
