--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -22,20 +22,27 @@ jobs:
           flutter-version: '3.19.0'
           channel: 'stable'
           cache: true
+          cache-key: 'flutter-windows-3.19.0-'
           
+      - name: Cache Pub dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            **/pubspec.lock
+            .dart_tool/
+            .pub-cache/
+          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pub-
+            
       - name: Install dependencies
         run: flutter pub get
         
       - name: Build Windows app
         run: flutter build windows
         
-      - name: Create MSIX package
-        run: |
-          flutter pub add msix
-          flutter pub run msix:create --skip-certificate-check
-          
-      - name: Upload MSIX package
+      - name: Upload Windows app
         uses: actions/upload-artifact@v4
         with:
           name: windows-app
-          path: build/windows/runner/Release/*.msix 
+          path: build/windows/runner/Release/*.exe 
